--- a/work03/main.css
+++ b/work03/main.css
@@ -1,5 +1,5 @@
 :root {
-  --colorW: #F7F8F8;
+  --colorW: #ffffff;
   --colorGL: #9FA0A0;
   --colorGD: #525152;
 
@@ -67,7 +67,6 @@ body {
   display: flex;
   justify-content: center;
   align-self: center;
-
 }
 
 #container {
@@ -116,7 +115,6 @@ body {
   justify-content: center;
   align-items: center;
 
-
   background-color: var(--color-BG01);
   border-radius: 20px;
   border: 5px solid var(--color-border);
@@ -125,11 +123,13 @@ body {
 .OpenHouse>h2 {
   width: 100%;
   flex: 1;
-  border-bottom:3px solid var(--color-border);
+  border-bottom: 3px solid var(--color-border);
 }
+
 #PutroomID {
   font-size: var(--p-3rem);
 }
+
 .OpenHouse>ul {
   list-style-type: none;
   box-sizing: border-box;
@@ -142,21 +142,42 @@ body {
   &::-webkit-scrollbar {
     width: 10px;
   }
+
   &::-webkit-scrollbar-track {
     background: var(--colorW);
   }
+
   &::-webkit-scrollbar-thumb {
     background-color: var(--color-border);
     border-radius: 10px;
   }
+
   &::-webkit-scrollbar-thumb:hover {
     background-color: var(--BTN_Yellow_hover);
   }
 }
 
 .OpenHouse>ul>li {
+  position: relative;
   display: flex;
   justify-content: space-between;
+  text-indent: 1rem;
+  /* 段落首行縮排 */
+  /* background-color: #337e47; */
+}
+
+li::before {
+  position: absolute;
+  top: 4px;
+  left: -35px;
+  content: "👨‍🦲";
+}
+
+li:first-of-type::before {
+  position: absolute;
+  top: 4px;
+  left: -35px;
+  content: "👑";
 }
 
 li>span {
@@ -174,7 +195,20 @@ li>span {
   align-items: center;
 }
 
-.btns>.return {
+button {
+  transition: 0.3s;
+}
+
+button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+button:active {
+  transform: scale(0.8);
+}
+
+.btns>.returnLogin {
   width: 45%;
   height: 100%;
   background-color: var(--BTN_Red);
@@ -182,13 +216,35 @@ li>span {
   border-radius: 10px;
 }
 
-.btns>.startGame {
+.btns>.startGame,
+.btns>.readyGame {
   width: 45%;
   height: 100%;
   background-color: var(--BTN_Yellow);
   border: 1px solid transparent;
 
   border-radius: 10px;
+}
+
+.btns>.startGame:disabled {
+  background-color: var(--colorGL);
+  cursor: not-allowed;
+  color: var(--color-BG01);
+}
+
+.btns>.startGame:disabled:active {
+  transform: scale(1.1);
+}
+
+.btns>.readyGame:hover {
+  width: 45%;
+  height: 100%;
+  border: 1px solid transparent;
+  border-radius: 10px;
+}
+
+.prepared {
+  background-color: var(--BTN_Green) !important;
 }
 
 .Login {
@@ -260,6 +316,13 @@ li>span {
   color: black;
 }
 
+input[type="text"]:-internal-autofill-selected {
+  box-shadow: inset 0 0 0 1000px var(--colorW) !important;
+  /* 改背景色 */
+  -webkit-text-fill-color: var(--color-p) !important;
+  /*改文本颜色 */
+}
+
 button {
   color: var(--color-BG01);
   border: 1px solid transparent;
@@ -278,4 +341,95 @@ button {
   cursor: pointer;
   background-color: var(--BTN_Yellow_hover);
   box-shadow: 0 0 30px 5px var(--BTN_Yellow);
+}
+
+/* dialog - 提示框 */
+.dialog {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dialogBox {
+  position: relative;
+
+  box-sizing: border-box;
+  width: fit-content;
+  height: fit-content;
+  background-color: var(--color-BG01);
+  padding: 30px;
+
+  border-radius: 20px;
+  border: 5px solid var(--color-border);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-size: var(--p-15rem);
+}
+
+.btn {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 1px solid transparent;
+  transition: 0.3s ease-in-out;
+  background-color: var(--BTN_Yellow);
+  font-weight: 800;
+}
+
+.btn.close {
+  position: absolute;
+  top: -0.9rem;
+  right: -0.9rem;
+}
+
+.btn.close:hover {
+  cursor: pointer;
+  background-color: var(--BTN_Red);
+  transform: scale(1.1) rotate(15deg);
+}
+
+.btn.close:hover:active {
+  transform: scale(0.8);
+}
+
+.ani_zoomIN {
+  animation: zoomIN 0.5s ease-in-out;
+}
+
+.ani_zoomOUT {
+  animation: zoomOUT 0.5s ease-in-out;
+}
+
+@keyframes zoomIN {
+  0% {
+    transform: scale(0.5);
+  }
+
+  90%,
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes zoomOUT {
+  0% {
+    transform: scale(1);
+  }
+
+  90%,
+  100% {
+    transform: scale(0);
+  }
 }
